# Rust-PyO3-Sort

./: .gitignore  Cargo.toml  README.md  setup.py
examples/: test1.py
src/: lib.rs
