[package]
name = "pysort"
version = "0.1.0"
authors = ["Seok Won <ikr@kakao.com>"]
edition = "2018"
license = "MIT"

[dependencies]
pyo3 = { version = "0.13.2", features = ["extension-module"] }

[lib]
name = "pysort"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3